changed some styling to fix issue with z-index

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -32,7 +32,7 @@
   section {
     margin: 0 5%;
   }
-  section__pic-container {
+  .section__pic-container {
     width: 275px;
     height: 275px;
     margin: 0 auto 2rem;
